[workspace]
resolver = "2"

members = [
    "backerror-rs/backerror",
    "backerror-rs/backerror-macros",
    "macaddr-ouidb",
]


# Exclude sample projects from workspace
exclude = ["samples"]


[workspace.package]
version = "0.1.2"
authors = ["Ting Lou <ting.lou@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/tinglou/backerror-rs"

[workspace.dependencies]
backerror-macros = { path = "backerror-rs/backerror-macros", version = "0.1.2" }
