[workspace]
resolver = "2"

members = [
    "backerror-rs/backerror",
    "backerror-rs/backerror-macros",
    "init-log4rs",
    "macaddr-ouidb",
]

# Exclude sample projects from workspace
exclude = ["samples", "erfs"]

[workspace.package]
version = "0.1.6"
authors = ["Ting Lou <ting.lou@gmail.com>"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/tinglou/oh-my-rust-crates"

[workspace.dependencies]
backerror-macros = { path = "backerror-rs/backerror-macros", version = "0.1.6" }
