[package]
name = "init-log4rs"
description = "Search log4rs configuration in multiple directories or create one"

categories = ["development-tools::debugging"]  # https://crates.io/category_slugs
documentation = "https://docs.rs/init-log4rs/"
keywords = ["log4rs", "log"]

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
log4rs = "1.4.0"
thiserror = "2.0.18"
