[package]
name = "macaddr-ouidb"
categories = ["rust-patterns", "development-tools::debugging"]
documentation = "https://docs.rs/backerror/"
keywords = ["error", "error-handling", "backtrace", "stacktrace", "thiserror"]

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
build = "build.rs"

[features]
default = ["std", "serde", "pnet"]

std = ["pnet_base/std", "serde/std", "thiserror/std"]
pnet = []
serde = ["dep:serde"]

[dependencies]
pnet_base = { version = "0.35.0", default-features = false }
serde = { version = "1.0.228", default-features = false, optional = true }
thiserror = { version = "2.0.18", default-features = false }
