[package]
name = "macaddr-ouidb"
description = "Mac Address and OUI(Organizationally Unique Identifiers) database"

categories = [
    "network-programming",
    "no-std::no-alloc",
    "no-std",
] # https://crates.io/category_slugs
documentation = "https://docs.rs/macaddr-ouidb/"
keywords = ["mac", "oui", "network", "eui48", "wireshark", "ethernet", "address", "lookup"]

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
build = "build.rs"

[features]
default = ["std", "serde", "pnet"]

std = ["pnet_base/std", "serde/std", "thiserror/std"]
pnet = []
serde = ["dep:serde"]

[dependencies]
pnet_base = { version = "0.35.0", default-features = false }
serde = { version = "1.0.228", default-features = false, optional = true }
thiserror = { version = "2.0.18", default-features = false }
