[package]
name = "backerror-macros"
description = "Java style backtrace for Rust"
categories = [
    "rust-patterns",
    "development-tools::debugging",
    "no-std",
] # https://crates.io/category_slugs
documentation = "https://docs.rs/backerror/"
keywords = ["error", "error-handling", "backtrace", "stacktrace", "thiserror"]

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
release_off = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
thiserror = "2.0.18"
