[package]
name = "backerror"
description = "Java style backtrace for Rust"
categories = ["rust-patterns", "development-tools::debugging"]
documentation = "https://docs.rs/backerror/"
keywords = ["error", "error-handling", "backtrace", "stacktrace", "thiserror"]

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true


[dependencies]
backerror-macros = { workspace = true }


[dev-dependencies]
thiserror = "2"

[features]
default = ["force_backtrace", "release_off"]

# only if environment variable RUST_BACKTRACE or RUST_LIB_BACKTRACE is set
backtrace = []

# force backtrace even if environment variable is not set
force_backtrace = ["backtrace"]

# turn off attribute macro in release mode
release_off = ["backerror-macros/release_off"]
