[package]
name = "erfs-rt"
build = "build.rs"
version = "0.1.1"
authors = ["Lou, Ting <ting.lou@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/tinglou/erfs"
homepage = "https://github.com/tinglou/erfs"
description = "Embedded resource file system(C/Rust): runtime api to access embedded resources."

[dependencies]

[build-dependencies]
cc = { version = "1.0.50", features = ["parallel"] }
bindgen = "0.49.4"

