[package]
name = "mac-oui-nostd-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# macaddr-ouidb with no_std (default-features = false)
# Demonstrates: serde, pnet interop, basic MAC operations (all no_std compatible)
macaddr-ouidb = { path = "../../macaddr-ouidb", default-features = false, features = ["serde", "pnet"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pnet_base = "0.35.0"
